<resources>
    <string name="app_name">Hitchhikify</string>
    <string name="action_settings">Settings</string>
    <string name="edit_profile">Edit profile</string>
    <string name="start_new_trip">Start new trip!</string>
    <string name="you_are_waiting">You are waiting:</string>
    <string name="dont_worry">Don\'t worry! It\'s perfectly fine for this location to wait up to %1$d mins</string>
    <string name="your_stats_for_this_trip">Your stats for this trip:</string>
    <string name="km_so_far">%1$d km so far</string>
    <string name="cars_so_far">%1$d cars so far</string>
    <string name="current_trip_duration">current_trip_duration:\n%1$d hours</string>
    <string name="average_speed">Average speed:\n%1$d kmh</string>
    <string name="picked_up">Someone picked us up!</string>
</resources>
