<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:grid="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/layoutBackgroundColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/you_are_waiting_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/you_are_waiting"
        android:textSize="18sp"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/time_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="00:20:43"
        android:textSize="50sp"
        android:textAllCaps="true"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/dont_worry_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAlignment="center"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/picked_up"
        android:textSize="18sp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="@color/colorAccentGreen"/>
    <TextView
        android:id="@+id/your_stats_for_this_trip_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_stats_for_this_trip"
        android:textSize="20sp"
        android:textAlignment="center"/>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="2"
        android:columnCount="2"
        grid:alignmentMode="alignBounds">

        <org.hitchhikify.ui.Tile
            android:id="@+id/waiting_distance_travelled_tile"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:image_src="@drawable/map"
            app:text="@string/km_so_far"/>
        <org.hitchhikify.ui.Tile
            android:id="@+id/cars_travelled_tile"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:image_src="@drawable/car"
            app:text="@string/cars_so_far"/>
        <org.hitchhikify.ui.Tile
            android:id="@+id/current_trip_duration_tile"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:image_src="@drawable/timer"
            app:text="@string/current_trip_duration"/>
        <org.hitchhikify.ui.Tile
            android:id="@+id/average_speed_tile"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:image_src="@drawable/motorboat"
            app:text="@string/average_speed"/>
    </GridLayout>
</LinearLayout>