<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:grid="http://schemas.android.com/tools"
    android:background="@color/layoutBackgroundColor"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:title="@string/action_settings"
        android:subtitleTextColor="@android:color/holo_orange_light"
        android:id="@+id/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                app:civ_border_width="5dp"
                android:background="@color/tileColor"
                app:civ_border_color="#FFFF0000"/>
            <TextView
                android:id="@+id/edit_profile_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile"
                android:layout_gravity="bottom"
                android:layout_below="@id/profile_image"
                />
        <Button
            android:id="@+id/start_new_trip_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/start_new_trip"
            android:textColor="@color/colorAccent"
            android:layout_toEndOf="@id/profile_image" />
    </RelativeLayout>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="2"
        android:columnCount="2"
        grid:alignmentMode="alignBounds">

        <org.hitchhikify.ui.Tile
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:image_src="@drawable/map"
            app:text="1200 km"/>
        <org.hitchhikify.ui.Tile
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:image_src="@drawable/car"
            app:text="56 cars"/>
        <org.hitchhikify.ui.Tile
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:image_src="@drawable/timer"
            app:text="278 hours"/>
        <org.hitchhikify.ui.Tile
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:image_src="@drawable/map"
            app:text="4 countries"/>
    </GridLayout>
</LinearLayout>
